--- a/WinAPIEngine/WinAPIEngine.vcxproj.filters
+++ b/WinAPIEngine/WinAPIEngine.vcxproj.filters
@@ -441,6 +441,12 @@
     <FxCompile Include="TextureVS.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
+    <FxCompile Include="LearningVS.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="LearningPS.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="WinAPIEngine.aps" />
